--- a/ViewGeneratorServ/src/components/Footer.css
+++ b/ViewGeneratorServ/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: #0d66be; /* Set background color */
+  background-color: #186f9a; /* Set background color */
   padding: 20px;
   text-align: center;
   display: flex;
@@ -22,4 +22,3 @@
   margin: 0;
 }
 
-/* Add more styles as needed */
