--- a/ViewGeneratorServ/src/components/AboutSection.css
+++ b/ViewGeneratorServ/src/components/AboutSection.css
@@ -1,24 +1,23 @@
-/* Updated CSS for adjusting spacing and alignment */
 .about-section {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 40px 20px; /* Adjust the top and bottom padding as needed */
+  padding: 40px 20px; 
   background-color: #edeaea;
 }
 
 .about-content {
   max-width: 500px;
-  text-align: left; /* Left justify the text */
+  text-align: left; 
   z-index: 1;
 }
 
 .about-content h2 {
   font-size: 2.5em;
   color: #333;
-  margin-bottom: 10px; /* Adjust the bottom margin */
+  margin-bottom: 10px; 
 }
 
 .about-content p {
@@ -34,7 +33,7 @@
  
   position: absolute;
   top: 50%;
-  right: 0; /* Set right to 0 to align the image to the right */
+  right: 0; 
   transform: translateY(-50%);
   animation: floatAnimation 4s infinite alternate;
   margin-right: 90px;
