--- a/ViewGeneratorServ/src/components/ContactUs.css
+++ b/ViewGeneratorServ/src/components/ContactUs.css
@@ -6,7 +6,7 @@
   }
   
   .moving-image img {
-    width: 300px; /* Adjust the width as needed */
+    width: 300px; 
   }
   
   .contact-cards {
@@ -21,15 +21,15 @@
     padding: 20px;
     margin-top: 20px;
     box-shadow: 0 10px 20px rgba(11, 4, 63, 0.1);
-    width: 500px; /* Adjust the width as needed */
+    width: 500px; 
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center the content horizontally */
+    align-items: center; 
   }
   
   .contact-card img {
-    width: 50px; /* Adjust the width as needed */
-    margin-bottom: 10px; /* Add space between image and text */
+    width: 50px; 
+    margin-bottom: 10px; 
   }
   
   .contact-card p {
